# graphql-edge-workers

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/docker/gql-async-graphql-ci/: Dockerfile
.github/workflows/: ci-image-gql-async-graphql.yml  gql-async-graphql.yml
docs/: file-reference.md  wasm-edge-graphql-landscape.md
docs/adrs/: 001-target-platform-cloudflare.md  002-rust-wasm-via-workers-rs.md  003-http-only-resolvers.md  004-two-independent-implementations.md  005-custom-parser-partial-spec.md  006-monorepo-no-shared-code.md  007-build-deploy-toolchain.md  008-service-to-service-auth.md
docs/plans/: 2026-03-08-edge-graphql-design.md  2026-03-08-gql-async-graphql.md  2026-03-08-gql-async-graphql.md.tasks.json  2026-03-08-gql-custom-parser.md  2026-03-08-gql-custom-parser.md.tasks.json  2026-03-09-cloudflare-worker-terraform.md  2026-03-09-cloudflare-worker-terraform.md.tasks.json  gql-async-graphql-deviations.md  gql-async-graphql-review.md
infra/terraform/cloudflare/: .terraform.lock.hcl  README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
workers/gql-async-graphql/: Cargo.toml  README.md  wrangler.toml
workers/gql-async-graphql/.wrangler/cache/: cf.json
workers/gql-async-graphql/src/: auth.rs  config.rs  handler.rs  http_client.rs  lib.rs  models.rs  schema.rs
workers/gql-async-graphql/supabase/: rls.sql
