[package]
name = "gql-async-graphql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.7", features = ["http"] }
worker-macros = { version = "0.7", features = ["http"] }
async-graphql = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
http-body-util = "0.1"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
